重构后端 Agent 链路并补齐审计与测试
- 新增运行审计、SSE 推送与安全护栏\n- 优化只读工具查询与 schema 构建\n- 补齐仓库计数接口与回归测试